Modificações no models, adicionada DetailView e adicionadas ferramentas da HomePAge: Tags, Busca

--- a/receitas/templates/receitas/base.html
+++ b/receitas/templates/receitas/base.html
@@ -1,14 +1,14 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Blog Home - Start Bootstrap Template</title>
+        <title>Portal de Receitas</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static 'receitas/assets/favicon.ico' %}" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -19,11 +19,11 @@
         <!-- Responsive navbar start -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">Portal de Receitas</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Portal de Receitas</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">O Portal</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contato</a></li>
                     </ul>
@@ -49,7 +49,7 @@
                 <!-- Blog entries-->
                 <div class="col-lg-8">
 
-                    {% block lista_receitas %}{% endblock lista_receitas %}
+                    {% block content_block %}{% endblock content_block %}
         
                 </div>
                 <!-- Side widgets-->
@@ -58,10 +58,13 @@
                     <div class="card mb-4">
                         <div class="card-header">Search</div>
                         <div class="card-body">
-                            <div class="input-group">
-                                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                                <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                            </div>
+                            <form method="GET" action="{% url 'busca' %}">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                    <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" name="busca"/>
+                                    <button class="btn btn-primary" id="button-search" type="submit">Go!</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                     <!-- Categories widget-->
@@ -71,16 +74,16 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <ul class="list-unstyled mb-0">
-                                        <li><a href="#!">Web Design</a></li>
-                                        <li><a href="#!">HTML</a></li>
-                                        <li><a href="#!">Freebies</a></li>
+                                        {% for tag in tags_col1 %}
+                                            <li><a href="{% url 'tag' tag.nome %}">{{ tag.nome }}</a></li>
+                                        {% endfor %}
                                     </ul>
                                 </div>
                                 <div class="col-sm-6">
                                     <ul class="list-unstyled mb-0">
-                                        <li><a href="#!">JavaScript</a></li>
-                                        <li><a href="#!">CSS</a></li>
-                                        <li><a href="#!">Tutorials</a></li>
+                                        {% for tag in tags_col2 %}
+                                            <li><a href="{% url 'tag' tag.nome %}">{{ tag.nome }}</a></li>
+                                        {% endfor %}
                                     </ul>
                                 </div>
                             </div>
