--- a/receitas/templates/receitas/home.html
+++ b/receitas/templates/receitas/home.html
@@ -2,19 +2,20 @@
 
 {% load static %}
 
-{% block lista_receitas %}
+{% block content_block %}
 
     <!-- Listagem de receitas start -->
     {% for receita in object_list %}
-        <div class="card mb-4">
-            <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
-            <div class="card-body">
-                <div class="small text-muted">January 1, 2021</div>
-                <h2 class="card-title">{{ receita.nome }}</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                <a class="btn btn-primary" href="#!">Read more →</a>
+        {% if receita.ativo %}
+            <div class="card mb-4">
+                <a href="{% url 'receita' receita.pk %}"><img class="card-img-top" src={% if receita.img %}"{{receita.img.url}}"{% else %}"{% static 'receitas/images/default.png' %}"{% endif %} alt="..." /></a>
+                <div class="card-body">
+                    <div class="small text-muted">{{ receita.data_hora }}</div>
+                    <h2 class="card-title">{{ receita.nome }}</h2>
+                    <a class="btn btn-primary" href="{% url 'receita' receita.pk %}">Ver receita →</a>
+                </div>
             </div>
-        </div>
+        {% endif %}
     {% endfor %}
     <!-- Listagem de receitas end -->                   
 
@@ -39,4 +40,6 @@
     </nav>
     <!-- Pagination end -->
 
-{% endblock lista_receitas %}
+    
+
+{% endblock content_block %}
