--- a/receitas/templates/receitas/receita.html
+++ b/receitas/templates/receitas/receita.html
@@ -3,71 +3,70 @@
 {% load static %}
 
 {% block content_block %}
-    <!-- Post content-->
-    <article>
-        <!-- Post header-->
-        <header class="mb-4">
-            <!-- Post title-->
-            <h1 class="fw-bolder mb-1">{{ object.nome }}</h1>
-            <!-- Post meta content-->
-            <div class="text-muted fst-italic mb-2">{{ object.data_hora }}</div>
-            <!-- Post categories-->
-            {% for tag in object.tags.all %}
-                <a class="badge bg-secondary text-decoration-none link-light" href="#!">{{ tag }}</a>
-            {% endfor %}
-        </header>
-        <!-- Preview image figure-->
-        <figure class="mb-4"><img class="img-fluid rounded" src={% if object.img %}"{{object.img.url}}"{% else %}"{% static 'receitas/images/default.png' %}"{% endif %} alt="..." /></figure>
-        <!-- Post content-->
-        <section class="mb-5">
-            <h2 class="fw-bolder mb-4 mt-5">Ingredientes</h2>
-            {% for ingrediente in object.ingrediente_receita.all %}
-                <p class="fs-5 mb-4">{{ ingrediente }}</p>
-            {% endfor %}
-            <h2 class="fw-bolder mb-4 mt-5">Preparo</h2>
-            <p class="fs-5 mb-4">{{ object.preparo }}</p>
-        </section>
-    </article>
-    <!-- Comments section-->
-    <section class="mb-5">
-        <div class="card bg-light">
-            <div class="card-body">
-                <!-- Comment form-->
-                <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
-                <!-- Comment with nested comments-->
-                <div class="d-flex mb-4">
-                    <!-- Parent comment-->
-                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                    <div class="ms-3">
-                        <div class="fw-bold">Commenter Name</div>
-                        If you're going to lead a space frontier, it has to be government; it'll never be private enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified risks.
-                        <!-- Child comment 1-->
-                        <div class="d-flex mt-4">
-                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                            <div class="ms-3">
-                                <div class="fw-bold">Commenter Name</div>
-                                And under those conditions, you cannot establish a capital-market evaluation of that enterprise. You can't get investors.
-                            </div>
-                        </div>
-                        <!-- Child comment 2-->
-                        <div class="d-flex mt-4">
-                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                            <div class="ms-3">
-                                <div class="fw-bold">Commenter Name</div>
-                                When you put money directly to a problem, it makes a good headline.
-                            </div>
+
+    <!-- Page content-->
+    <div class="container">
+        <div class="row justify-content-center">
+            <!-- Blog entries-->
+            <div class="col-lg-8">
+
+            <!-- Post content-->
+                <article>
+                    <!-- Post header-->
+                    <header class="mb-4">
+                        <!-- Post title-->
+                        <h1 class="fw-bolder mb-1">{{ object.nome }}</h1>
+                        <!-- Post meta content-->
+                        <div class="text-muted fst-italic mb-2">{{ object.data_hora }}</div>
+                        <!-- Post categories-->
+                        {% for tag in object.tags.all %}
+                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">{{ tag }}</a>
+                        {% endfor %}
+                    </header>
+                    <!-- Preview image figure-->
+                    <figure class="mb-4"><img class="img-fluid rounded" src={% if object.img %}"{{object.img.url}}"{% else %}"{% static 'receitas/images/default.png' %}"{% endif %} alt="..." /></figure>
+                    <!-- Post content-->
+                    <section class="mb-5">
+                        <h2 class="fw-bolder mb-4 mt-5">Ingredientes</h2>
+                        {% for ingrediente in object.ingrediente_receita.all %}
+                            <p class="fs-5 mb-4">{{ ingrediente }}</p>
+                        {% endfor %}
+                        <h2 class="fw-bolder mb-4 mt-5">Preparo</h2>
+                        <p class="fs-5 mb-4">{{ object.preparo }}</p>
+                    </section>
+                </article>
+                <!-- Comments section-->
+                <section class="mb-5">
+                    <div class="card bg-light">
+                        <div class="card-body">
+                            <!-- Comment form-->
+                            <form class="mb-4" method="POST" action="#">
+                                {% csrf_token %}
+                                <input class="form-control mb-1" type="text" placeholder="Informe seu nome e ..." name="nome"/>
+                                <textarea class="form-control" rows="3" placeholder="... deixe um comentário!"></textarea>
+                                <button class="btn btn-primary mt-1" id="button-search" type="submit">Comentar</button>
+                            </form>
+                            <!-- Comments -->
+                            {% for comentario in comentarios %}
+                                <div class="d-flex mb-4">
+                                    <div class="flex-shrink-0"><img class="rounded-circle" src="{% static 'receitas/images/avatar-default-icon.png' %}" alt="..." /></div>
+                                    <div class="ms-3">
+                                        <div class="fw-bold">{{ comentario.nome_usuario }}</div>
+                                        {{ comentario.texto }}
+                                    </div>
+                                </div>
+                            {% endfor %}
                         </div>
                     </div>
-                </div>
-                <!-- Single comment-->
-                <div class="d-flex">
-                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                    <div class="ms-3">
-                        <div class="fw-bold">Commenter Name</div>
-                        When I look at the universe and all the ways the universe wants to kill us, I find it hard to reconcile that with statements of beneficence.
-                    </div>
-                </div>
+                </section>  
+    
             </div>
+
+            {% block side_widgets %}{% endblock side_widgets %}
+                
         </div>
-    </section>
+    </div>
+
+
+    
 {% endblock content_block %}
